# niobi

./: .gitignore  Cargo.toml  LICENSE  README.ja.md  README.md
crates/qmed-wasm/: Cargo.toml
crates/qmed-wasm/src/: lib.rs
docs/submission/: demo_video_script.md  generate_report.py  generate_report_official.py  generate_slides.py  generate_summary_official.py  report_draft.md  report_final.docx  report_official.docx  report_template.docx  summary_final.pptx  summary_official.pptx  summary_slides_draft.md  summary_template.pptx
examples/: aml_detection.rs  blood_donation.rs  clinical_trial.rs  rare_disease.rs  scope3.rs
quantum/: liver_matching_qubo.py  matching_results.json  qml_cross_company.py  qml_drug_response.py  qml_drug_response_results.json  qml_federated_discovery.py  qml_federated_results.json  qml_trial_matching.py  scale_benchmark.py  scale_results.json  simulate_qkd.py
src/: annealing.rs  crypto.rs  exchange_chain.rs  fhe_scoring.rs  lib.rs  matching.rs  multi_organ.rs  privacy_protocol.rs  protocol.rs  scoring.rs  zkp_compat.rs
tests/: integration.rs
web/: index.html  worker.js
