[package]
name = "niobi"
version = "0.1.0"
edition = "2021"
description = "Privacy-preserving liver transplant matching via FHE"
license = "MIT"

[dependencies]
plat = { path = "../plat/crates/plat" }
plat-core = { path = "../plat/crates/plat-core" }
plat-mkfhe = { path = "../plat/crates/plat-mkfhe" }
argo = { path = "../argo/crates/argo" }
argo-core = { path = "../argo/crates/argo-core" }
rand = "0.8"

[dev-dependencies]
