[package]
name = "niobi-wasm"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
wasm-bindgen = "0.2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
js-sys = "0.3"
plat-core = { path = "../../../plat/crates/plat-core" }
argo-core = { path = "../../../argo/crates/argo-core" }
